<resources>
    <string name="app_name">FoodTruck</string>
    <string name="location">Location:\t\t</string>
    <string name="lost_dog_cafe">Lost Dog Cafe</string>
    <string name="italian_japanese">Italian, Japanese</string>
    <string name="more_info">More info</string>
    <string name="sandwiches_pizza_barfood">$ • Sandwiches • Pizza • Barfood</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="vendor">Vendor</string>
    <string name="account_type">Account Type</string>
    <string name="croissant">Croissant</string>
    <string name="_9_50">$9.50</string>
    <string name="review_dummy">The food in this restaurant was amazing, I love the lamb, it was tender and succulent. Would come back again!</string>
    <string name="add_menu_to_food_truck">Add menu for prospective diners</string>
    <string name="hours_operational">Hours operational</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="military0">0:00</string>
    <string name="upload_picture">Upload picture?</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="name_of_food_truck">Name of Food Truck</string>
    <string name="no_menu_items_added_yet">No menu items added yet</string>
    <string name="foodie">Foodie</string>
    <string name="description">Description</string>
    <string name="list_of_favorited_food_trucks">List of favorited food trucks</string>
    <string name="title_activity_maps">Map</string>
    <string name="username">username</string>
</resources>
