<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.fragments.AuthenticationMainFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/app_logo_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/foodtruck_square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_textinput_layout"
        android:layout_margin="64dp"
        style="@style/AuthenticationTextInputLayoutStyle.FilledBox"
        app:layout_constraintTop_toBottomOf="@+id/app_logo_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentication_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vendor_password_textinput_layout"
        android:layout_margin="16dp"
        style="@style/AuthenticationTextInputLayoutStyle.FilledBox"
        app:layout_constraintTop_toBottomOf="@id/email_textinput_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentication_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="2dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/vendor_password_textinput_layout"
        app:layout_constraintStart_toStartOf="@id/vendor_password_textinput_layout"
        android:layout_width="180dp"
        android:layout_height="60dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@id/vendor_password_textinput_layout"
        app:layout_constraintTop_toTopOf="@id/sign_in_button"
        android:layout_width="180dp"
        android:layout_height="60dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_password_bttn"
        android:layout_margin="4dp"
        android:textColor="@android:color/black"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textSize="16sp"
        android:text="Forgot Password?"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintStart_toStartOf="@id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>