<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.fragments.SignupFragment">

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/account_type_cl"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <TextView android:id="@+id/account_type_tv"
                        android:textAlignment="center"
                        android:text="@string/account_type"
                        android:textSize="18sp"
                        android:layout_marginTop="12dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.button.MaterialButtonToggleGroup android:id="@+id/account_type_button_toggle_group"
                        app:singleSelection="true"
                        app:layout_constraintTop_toBottomOf="@id/account_type_tv"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <com.google.android.material.button.MaterialButton android:id="@+id/foodie_button"
                            android:layout_marginEnd="0.5dp"
                            android:backgroundTint="@color/button_color_state_list"
                            style="@style/Widget.MaterialComponents.Button.Icon"
                            android:text="@string/foodie"
                            app:iconGravity="textStart"
                            app:icon="@drawable/foodie_icon"
                            android:layout_width="140dp"
                            android:layout_height="60dp"/>
                        <com.google.android.material.button.MaterialButton android:id="@+id/vendor_button"
                            android:layout_marginStart="0.5dp"
                            android:backgroundTint="@color/button_color_state_list"
                            style="@style/Widget.MaterialComponents.Button.Icon"
                            android:text="@string/vendor"
                            app:iconGravity="textStart"
                            app:icon="@drawable/vendor_icon"
                            android:layout_width="140dp"
                            android:layout_height="60dp"/>

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View android:id="@+id/divider"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@android:color/darker_gray"/>

                <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/foodie_account_form_constraintlayout"

                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="400dp">

                    <com.google.android.material.textfield.TextInputLayout

                        android:layout_marginTop="16dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:hint="Email"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:layout_marginBottom="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="Submit"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/vendor_account_form_constrainlayout"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="400dp">

                    <com.google.android.material.textfield.TextInputLayout

                        android:layout_marginTop="16dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:hint="Email"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:layout_marginBottom="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="Submit"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>