<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <CheckBox
        android:id="@+id/checkbox_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="472dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@id/tv_wednesday"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:fontFamily="serif"
        android:text="Wednesday"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_operational_hours" />

    <CheckBox
        android:id="@+id/checkbox_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="436dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@id/tv_tuesday"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:fontFamily="serif"
        android:text="Tuesday"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_operational_hours" />

    <TextView
        android:id="@+id/tv_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="Monday"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_operational_hours" />

    <CheckBox
        android:id="@+id/checkbox_monday2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@id/tv_monday"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryVariant"
        app:title="Food Truck Findr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:menu="@menu/menu_foodtruck_creation_dialog"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"/>

    <TextView
        android:id="@+id/textView"
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name of Food Truck"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear-text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_foodtruck_model"
        style="@style/HeaderTextStyle"
        android:text="Truck Model"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_truck_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_foodtruck_model"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_add_menu"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_menu_to_food_truck"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_truck_model" />

    <Switch
        android:id="@+id/switch_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <TextView
        android:id="@+id/tv_operational_hours"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hours_operational"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_menu" />

    <TextView
        android:id="@+id/tv_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="137dp"
        android:fontFamily="serif"
        android:text="Thursday"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_operational_hours" />

    <CheckBox
        android:id="@+id/checkbox_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="507dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@id/tv_thursday"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:fontFamily="serif"
        android:text="Friday"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_operational_hours" />

    <CheckBox
        android:id="@+id/checkbox_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="541dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@id/tv_friday"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:fontFamily="serif"
        android:text="@string/saturday"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_operational_hours" />

    <CheckBox
        android:id="@+id/checkbox_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="576dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@id/tv_saturday"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="242dp"
        android:fontFamily="serif"
        android:text="@string/sunday"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_operational_hours" />

    <CheckBox
        android:id="@+id/checkbox_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="610dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@id/tv_sunday"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>